# printing_ffi

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.github/: funding.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/printing_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  main_old.dart  modern_print_dialog.dart  pdf_viewer_dialog.dart  widgets.dart  widgets_old.dart
example/lib/original_example_files/: main_original.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: Podfile
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: printing_ffi.podspec
ios/Classes/: printing_ffi.c
lib/: printing_ffi.dart  printing_ffi_bindings_generated.dart
lib/models/: exceptions.dart  models.dart  pdf_print_settings.dart  print_job.dart  print_options.dart  printer.dart  printer_capabilities.dart  printer_properties_result.dart
linux/: CMakeLists.txt
macos/: printing_ffi.podspec
src/: CMakeLists.txt  printing_ffi.c  printing_ffi.h
windows/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
